# ClaudeTest

./: .gitignore  CLAUDE.md  Procfile  README.md  applications.md  pyproject.toml  requirements.txt
.claude/scripts/: render_pdf.py  scrape_ashby.py  scrape_greenhouse.py  scrape_hn_whoshiring.py  scrape_indeed.py  scrape_lever.py  scrape_linkedin.py  scrape_wellfound.py
.claude/skills/applications-review/: SKILL.md
.github/workflows/: submit-application.yml
_legacy/interview-prep/: notes.md
_legacy/resume/: resume.md
_legacy/tools/: generate_cover_letter.py  job_board.py  tailor_resume.py
applications/: CLAUDE.md  backlog.md  checklist.md  index.md  log.md  tracker.md
applications/jds/: airalo_2026-05-26.txt  ey_canada_2026-05-26.txt  omm_it_2026-05-26.txt  stackadapt-manager-performance-services_20260528.txt
applications/resumes/: airalo_20260526_120000.md  ey_canada_2026-05-26.md  omm_it_2026-05-26.md  stackadapt-manager-performance-services_20260528.md  stackadapt_20260528.md
cover-letters/: template.md
postings/: CLAUDE.md  backlog.md  index.md  log.md
profile/: CLAUDE.md  backlog.md  bullets-library.md  index.md  log.md  master-resume.md  screening-answers.md  targets.md
raw/: README.md
resume/: detail-bank.md  resume.md
templates/: CLAUDE.md  backlog.md  cover-letter.tex  index.md  log.md  pandoc-defaults.yaml  resume.tex
tools/: apply.py  gha_submit.py  job_board.py  md_to_pdf.py  submit.py
wiki/: index.md  log.md
wiki/_templates/: concept.md  entity.md  source.md  synthesis.md  topic.md
wiki/self/: Goals.md  Michael.md  Skills.md
(+5 files in other folders)
